# rock-paper-scissors

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/main_manager/: CMakeLists.txt
src/main_manager/inc/domain/: hand.h  results.h
src/main_manager/inc/infrastructure/players_input/: players_input.h
src/main_manager/src/: main.cpp
src/main_manager/src/domain/: hand.cpp
src/main_manager/src/infrastructure/players_input/: players_input.cpp
src/main_manager/src/infrastructure/players_input/src/: players_input.cpp
